# setup-cronjob

./: .bumpversion.toml  .envrc  .pre-commit-config.yaml  pyproject.toml  pytest.toml
.github/workflows/: pull-request.yaml  push.yaml
src/setup_cronjob/: cli.py  cron.tmpl  lib.py  settings.py
src/tests/: test_lib.py  test_main.py
