[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]", "pyright", "rich"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = []
  name = "dycw-make-crontab"
  readme = "README.md"
  requires-python = ">= 3.14"
  version = "0.1.1"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "make-crontab"
      module-root = "src"
